@@ -5,6 +5,17 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
+import com.google.gson.*;
+
+import net.helpscout.api.adapters.*;
+import net.helpscout.api.cbo.*;
+import net.helpscout.api.exception.*;
+import net.helpscout.api.model.*;
+import net.helpscout.api.model.Customer;
+import net.helpscout.api.model.customer.SearchCustomer;
+import net.helpscout.api.model.thread.*;
+
+import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.charset.Charset;
@@ -67,8 +78,6 @@ import net.helpscout.api.model.thread.ForwardChild;
 import net.helpscout.api.model.thread.ForwardParent;
 import net.helpscout.api.model.thread.Message;
 import net.helpscout.api.model.thread.Note;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
@@ -76,6 +85,8 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
+import org.apache.commons.codec.binary.Base64;
+import org.slf4j.LoggerFactory;
 
 public class ApiClient {
 
@@ -85,8 +96,8 @@ public class ApiClient {
 	private final static String METHOD_PUT = "PUT";
 	private final static String METHOD_DELETE = "DELETE";
 
-    private final static int HTTP_STATUS_OK = 200;
-    private final static int HTTP_STATUS_CREATED = 201;
+	private final static int HTTP_STATUS_OK = 200;
+	private final static int HTTP_STATUS_CREATED = 201;
 
 	private String apiKey = "";
 	private String baseUrl = DEFAULT_BASE_URL;
@@ -108,25 +119,51 @@ public class ApiClient {
 	}
 
 	/**
-     * Gets the mailbox with the specified id.
-     *
-     * @param mailboxID
-     * @return Mailbox
-     * @throws ApiException
-     */
+	 * Gets the mailbox with the specified id.
+	 *
+	 * @param mailboxID
+	 * @return Mailbox
+	 * @throws ApiException
+	 * @deprecated use {@link #getMailbox(Long)}
+	 */
 	public Mailbox getMailbox(Integer mailboxID) throws ApiException {
+		return getMailbox(Long.valueOf(mailboxID));
+	}
+
+	/**
+	 * Gets the mailbox with the specified id.
+	 *
+	 * @param mailboxID
+	 * @return Mailbox
+	 * @throws ApiException
+	 */
+	public Mailbox getMailbox(Long mailboxID) throws ApiException {
 		return (Mailbox)getItem("mailboxes/" + mailboxID + ".json", Mailbox.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the mailbox with the specified id.
-     *
-     * @param mailboxID
-     * @param fields
-     * @return Mailbox
-     * @throws ApiException
-     */
-	public Mailbox getMailbox(Integer mailboxID, List<String> fields) throws ApiException {
+	/**
+	 * Gets the mailbox with the specified id.
+	 *
+	 * @param mailboxID
+	 * @param fields
+	 * @return Mailbox
+	 * @throws ApiException
+	 * @deprecated use {@link #getMailbox(Long, List)}
+	 */
+	public Mailbox getMailbox(Integer mailboxID, List<String> fields)
+			throws ApiException {
+		return getMailbox(Long.valueOf(mailboxID), fields);
+	}
+
+	/**
+	 * Gets the mailbox with the specified id.
+	 *
+	 * @param mailboxID
+	 * @param fields
+	 * @return Mailbox
+	 * @throws ApiException
+	 */
+	public Mailbox getMailbox(Long mailboxID, List<String> fields) throws ApiException {
 		if (mailboxID == null || mailboxID < 1) {
 			throw new ApiException("Invalid mailboxId in getMailbox");
 		}
@@ -134,234 +171,429 @@ public class ApiClient {
 		return (Mailbox)getItem(url, Mailbox.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the first page of mailboxes.
-     *
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getMailboxes() throws ApiException {
+	/**
+	 * Gets the first page of mailboxes.
+	 *
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Mailbox> getMailboxes() throws ApiException {
 		return getPage("mailboxes.json", Mailbox.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Get the first page of mailboxes.
-     *
-     * @param fields
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getMailboxes(List<String> fields) throws ApiException {
+	/**
+	 * Get the first page of mailboxes.
+	 *
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Mailbox> getMailboxes(List<String> fields) throws ApiException {
 		String url = setFields("mailboxes.json", fields);
 		return getPage(url, Mailbox.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets a list of mailboxes.
-     *
-     * @param queryParams
-     * @return Page
-     * @throws ApiException
-     */
-    public Page getMailboxes(Map<String, String> queryParams) throws ApiException {
-        return getPage("mailboxes.json", queryParams, Mailbox.class, HTTP_STATUS_OK);
-    }
+	/**
+	 * Gets a list of mailboxes.
+	 *
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Mailbox> getMailboxes(Map<String, String> queryParams) throws ApiException {
+		return getPage("mailboxes.json", queryParams, Mailbox.class, HTTP_STATUS_OK);
+	}
 
-    /**
-     * Gets the first page of folders for the specified mailbox.
-     *
-     * @param mailboxId
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getFolders(Integer mailboxId) throws ApiException {
+	/**
+	 * Gets the first page of folders for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getFolders(Long)}
+	 */
+	public Page<Folder> getFolders(Integer mailboxId) throws ApiException {
+		return getFolders(Long.valueOf(mailboxId));
+	}
+
+	/**
+	 * Gets the first page of folders for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Folder> getFolders(Long mailboxId) throws ApiException {
 		return getPage("mailboxes/" + mailboxId + "/folders.json", Folder.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the first page of folders for the specified mailbox.
-     *
-     * @param mailboxId
-     * @param fields
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getFolders(Integer mailboxId, List<String> fields) throws ApiException {
+	/**
+	 * Gets the first page of folders for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getFolders(Long, List)}
+	 */
+	public Page<Folder> getFolders(Integer mailboxId, List<String> fields) throws ApiException {
+		return getFolders(Long.valueOf(mailboxId), fields);
+	}
+
+	/**
+	 * Gets the first page of folders for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Folder> getFolders(Long mailboxId, List<String> fields) throws ApiException {
 		String url = setFields("mailboxes/" + mailboxId + "/folders.json", fields);
 		return getPage(url, Folder.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets a page of folders for the specified mailbox.
-     *
-     * @param mailboxId
-     * @param queryParams
-     * @return Page
-     * @throws ApiException
-     */
-    public Page getFolders(Integer mailboxId, Map<String, String> queryParams) throws ApiException {
-        return getPage("mailboxes/" + mailboxId + "/folders.json", queryParams, Folder.class, HTTP_STATUS_OK);
-    }
+	/**
+	 * Gets a page of folders for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getFolders(Long, Map)}
+	 */
+	public Page<Folder> getFolders(Integer mailboxId, Map<String, String> queryParams) throws ApiException {
+		return getFolders(Long.valueOf(mailboxId), queryParams);
+	}
 
-    /**
-     * Gets the first page of conversations for the specified mailbox and folder.
-     *
-     * @param mailboxID
-     * @param folderID
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getConversationsForFolder(Integer mailboxID, Integer folderID) throws ApiException {
+	/**
+	 * Gets a page of folders for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Folder> getFolders(Long mailboxId, Map<String, String> queryParams) throws ApiException {
+		return getPage("mailboxes/" + mailboxId + "/folders.json", queryParams, Folder.class, HTTP_STATUS_OK);
+	}
+
+	/**
+	 * Gets the first page of conversations for the specified mailbox and
+	 * folder.
+	 *
+	 * @param mailboxID
+	 * @param folderID
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getConversationsForFolder(Long, Long)}
+	 */
+	public Page<Conversation> getConversationsForFolder(Integer mailboxID, Integer folderID) throws ApiException {
+		return getConversationsForFolder(Long.valueOf(mailboxID), Long.valueOf(folderID));
+	}
+
+	/**
+	 * Gets the first page of conversations for the specified mailbox and
+	 * folder.
+	 *
+	 * @param mailboxID
+	 * @param folderID
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Conversation> getConversationsForFolder(Long mailboxID, Long folderID) throws ApiException {
 		return getPage("mailboxes/" + mailboxID + "/folders/" + folderID + "/conversations.json", Conversation.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the first page of conversations for the specified mailbox and folder.
-     *
-     * @param mailboxID
-     * @param folderID
-     * @param fields
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getConversationsForFolder(Integer mailboxID, Integer folderID, List<String> fields) throws ApiException {
+	/**
+	 * Gets the first page of conversations for the specified mailbox and
+	 * folder.
+	 *
+	 * @param mailboxID
+	 * @param folderID
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getConversationsForFolder(Long, Long, List)}
+	 */
+	public Page<Conversation> getConversationsForFolder(Integer mailboxID, Integer folderID, List<String> fields) throws ApiException {
+		return getConversationsForFolder(Long.valueOf(mailboxID), Long.valueOf(folderID), fields);
+	}
+
+	/**
+	 * Gets the first page of conversations for the specified mailbox and
+	 * folder.
+	 *
+	 * @param mailboxID
+	 * @param folderID
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Conversation> getConversationsForFolder(Long mailboxID, Long folderID, List<String> fields) throws ApiException {
 		String url = setFields("mailboxes/" + mailboxID + "/folders/" + folderID + "/conversations.json", fields);
 		return getPage(url, Conversation.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets a page of conversations for the specified mailbox and folder.
-     *
-     * @param mailboxID
-     * @param folderID
-     * @param queryParams
-     * @return Page
-     * @throws ApiException
-     */
-    public Page getConversationsForFolder(Integer mailboxID, Integer folderID, Map<String, String> queryParams) throws ApiException {
-        return getPage("mailboxes/" + mailboxID + "/folders/" + folderID + "/conversations.json", queryParams, Conversation.class, HTTP_STATUS_OK);
-    }
+	/**
+	 * Gets a page of conversations for the specified mailbox and folder.
+	 *
+	 * @param mailboxID
+	 * @param folderID
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getConversationsForFolder(Long, Long, Map)}
+	 */
+	public Page<Conversation> getConversationsForFolder(Integer mailboxID, Integer folderID, Map<String, String> queryParams) throws ApiException {
+		return getConversationsForFolder(Long.valueOf(mailboxID), Long.valueOf(folderID), queryParams);
+	}
 
-    /**
-     * Gets the first page of conversations for the specified mailbox.
-     *
-     * @param mailboxID
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getConversationsForMailbox(Integer mailboxID) throws ApiException {
+	/**
+	 * Gets a page of conversations for the specified mailbox and folder.
+	 *
+	 * @param mailboxID
+	 * @param folderID
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Conversation> getConversationsForFolder(Long mailboxID, Long folderID, Map<String, String> queryParams) throws ApiException {
+		return getPage("mailboxes/" + mailboxID + "/folders/" + folderID + "/conversations.json", queryParams, Conversation.class, HTTP_STATUS_OK);
+	}
+
+	/**
+	 * Gets the first page of conversations for the specified mailbox.
+	 *
+	 * @param mailboxID
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getConversationsForMailbox(Long)}
+	 */
+	public Page<Conversation> getConversationsForMailbox(Integer mailboxID) throws ApiException {
+		return getConversationsForMailbox(Long.valueOf(mailboxID));
+	}
+
+	/**
+	 * Gets the first page of conversations for the specified mailbox.
+	 *
+	 * @param mailboxID
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Conversation> getConversationsForMailbox(Long mailboxID) throws ApiException {
 		return getPage("mailboxes/" + mailboxID + "/conversations.json", Conversation.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the first page of conversations for the specified mailbox.
-     *
-     * @param mailboxID
-     * @param fields
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getConversationsForMailbox(Integer mailboxID, List<String> fields) throws ApiException {
+	/**
+	 * Gets the first page of conversations for the specified mailbox.
+	 *
+	 * @param mailboxID
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getConversationsForMailbox(Long, List)}
+	 */
+	public Page<Conversation> getConversationsForMailbox(Integer mailboxID, List<String> fields) throws ApiException {
+		return getConversationsForMailbox(Long.valueOf(mailboxID), fields);
+	}
+
+	/**
+	 * Gets the first page of conversations for the specified mailbox.
+	 *
+	 * @param mailboxID
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Conversation> getConversationsForMailbox(Long mailboxID, List<String> fields) throws ApiException {
 		String url = setFields("mailboxes/" + mailboxID + "/conversations.json", fields);
 		return getPage(url, Conversation.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets a page of conversations for the specified mailbox.
-     *
-     * @param mailboxID
-     * @param queryParams
-     * @return Page
-     * @throws ApiException
-     */
-    public Page getConversationsForMailbox(Integer mailboxID, Map<String, String> queryParams) throws ApiException {
-        return getPage("mailboxes/" + mailboxID + "/conversations.json", queryParams, Conversation.class, HTTP_STATUS_OK);
-    }
+	/**
+	 * Gets a page of conversations for the specified mailbox.
+	 *
+	 * @param mailboxID
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getConversationsForMailbox(Long, Map)}
+	 */
+	public Page<Conversation> getConversationsForMailbox(Integer mailboxID, Map<String, String> queryParams) throws ApiException {
+		return getConversationsForMailbox(Long.valueOf(mailboxID), queryParams);
+	}
 
-    /**
-     * Gets the first page of conversations for the specified mailbox and customer.
-     *
-     * @param mailboxID
-     * @param customerID
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getConversationsForCustomerByMailbox(Integer mailboxID, Integer customerID) throws ApiException {
+	/**
+	 * Gets a page of conversations for the specified mailbox.
+	 *
+	 * @param mailboxID
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Conversation> getConversationsForMailbox(Long mailboxID, Map<String, String> queryParams) throws ApiException {
+		return getPage("mailboxes/" + mailboxID + "/conversations.json", queryParams, Conversation.class, HTTP_STATUS_OK);
+	}
+
+	/**
+	 * Gets the first page of conversations for the specified mailbox and
+	 * customer.
+	 *
+	 * @param mailboxID
+	 * @param customerID
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getConversationsForCustomerByMailbox(Long, Long)}
+	 */
+	public Page<Conversation> getConversationsForCustomerByMailbox(Integer mailboxID, Integer customerID) throws ApiException {
+		return getConversationsForCustomerByMailbox(Long.valueOf(mailboxID), Long.valueOf(customerID));
+	}
+
+	/**
+	 * Gets the first page of conversations for the specified mailbox and
+	 * customer.
+	 *
+	 * @param mailboxID
+	 * @param customerID
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Conversation> getConversationsForCustomerByMailbox(Long mailboxID, Long customerID) throws ApiException {
 		return getPage("mailboxes/" + mailboxID + "/customers/" + customerID + "/conversations.json", Conversation.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the first page of conversations for the specified mailbox and customer.
-     *
-     * @param mailboxID
-     * @param customerID
-     * @param fields
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getConversationsForCustomerByMailbox(Integer mailboxID, Integer customerID, List<String> fields) throws ApiException {
+	/**
+	 * Gets the first page of conversations for the specified mailbox and
+	 * customer.
+	 *
+	 * @param mailboxID
+	 * @param customerID
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use
+	 *             {@link #getConversationsForCustomerByMailbox(Long, Long, List)}
+	 */
+	public Page<Conversation> getConversationsForCustomerByMailbox(Integer mailboxID, Integer customerID, List<String> fields) throws ApiException {
+		return getConversationsForCustomerByMailbox(Long.valueOf(mailboxID), Long.valueOf(customerID), fields);
+	}
+
+	/**
+	 * Gets the first page of conversations for the specified mailbox and
+	 * customer.
+	 *
+	 * @param mailboxID
+	 * @param customerID
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Conversation> getConversationsForCustomerByMailbox(Long mailboxID, Long customerID, List<String> fields) throws ApiException {
 		String url = setFields("mailboxes/" + mailboxID + "/customers/" + customerID + "/conversations.json", fields);
 		return getPage(url, Conversation.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets a page of conversations for the specified mailbox and customer.
-     *
-     * @param mailboxID
-     * @param customerID
-     * @param queryParams
-     * @return Page
-     * @throws ApiException
-     */
-    public Page getConversationsForCustomerByMailbox(Integer mailboxID, Integer customerID, Map<String, String> queryParams) throws ApiException {
-        return getPage("mailboxes/" + mailboxID + "/customers/" + customerID + "/conversations.json", queryParams, Conversation.class, HTTP_STATUS_OK);
-    }
-
-    /**
-     * Gets the conversation with the specified id.
-     *
-     * @param conversationID
-     * @return Conversation
-     * @throws ApiException
-     */
-	public Conversation getConversation(Long conversationID) throws ApiException {
-		return (Conversation)getItem("conversations/" + conversationID + ".json", Conversation.class, HTTP_STATUS_OK);
+	/**
+	 * Gets a page of conversations for the specified mailbox and customer.
+	 *
+	 * @param mailboxID
+	 * @param customerID
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use
+	 *             {@link #getConversationsForCustomerByMailbox(Long, Long, Map)}
+	 */
+	public Page<Conversation> getConversationsForCustomerByMailbox(Integer mailboxID, Integer customerID, Map<String, String> queryParams) throws ApiException {
+		return getConversationsForCustomerByMailbox(Long.valueOf(mailboxID), Long.valueOf(customerID), queryParams);
 	}
 
-    /**
-     * Gets the conversation with the specified id.
-     *
-     * @param conversationID
-     * @param fields
-     * @return Conversation
-     * @throws ApiException
-     */
+	/**
+	 * Gets a page of conversations for the specified mailbox and customer.
+	 *
+	 * @param mailboxID
+	 * @param customerID
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Conversation> getConversationsForCustomerByMailbox(Long mailboxID, Long customerID, Map<String, String> queryParams) throws ApiException {
+		return getPage("mailboxes/" + mailboxID + "/customers/" + customerID + "/conversations.json", queryParams, Conversation.class, HTTP_STATUS_OK);
+	}
+
+	/**
+	 * Gets the conversation with the specified id.
+	 *
+	 * @param conversationID
+	 * @return Conversation
+	 * @throws ApiException
+	 */
+	public Conversation getConversation(Long conversationID) throws ApiException {
+		return getItem("conversations/" + conversationID + ".json", Conversation.class, HTTP_STATUS_OK);
+	}
+
+	/**
+	 * Gets the conversation with the specified id.
+	 *
+	 * @param conversationID
+	 * @param fields
+	 * @return Conversation
+	 * @throws ApiException
+	 * @deprecated use {@link #getConversation(Long, List)}
+	 */
 	public Conversation getConversation(Integer conversationID, List<String> fields) throws ApiException {
+		return getConversation(Long.valueOf(conversationID), fields);
+	}
+
+	/**
+	 * Gets the conversation with the specified id.
+	 *
+	 * @param conversationID
+	 * @param fields
+	 * @return Conversation
+	 * @throws ApiException
+	 */
+	public Conversation getConversation(Long conversationID, List<String> fields) throws ApiException {
 		if (conversationID == null || conversationID < 1) {
 			throw new ApiException("Invalid conversationId in getConversation");
 		}
 		String url = setFields("conversations/" + conversationID + ".json", fields);
-		return (Conversation)getItem(url, Conversation.class, HTTP_STATUS_OK);
+		return getItem(url, Conversation.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the thread source for the specified conversation and thread.
-     *
-     * @param conversationID
-     * @param threadID
-     * @return String
-     * @throws ApiException
-     */
+	/**
+	 * Gets the thread source for the specified conversation and thread.
+	 *
+	 * @param conversationID
+	 * @param threadID
+	 * @return String
+	 * @throws ApiException
+	 * @deprecated use {@link #getThreadSource(Long, Long)}
+	 */
 	public String getThreadSource(Integer conversationID, Integer threadID) throws ApiException {
+		return getThreadSource(Long.valueOf(conversationID), Long.valueOf(threadID));
+	}
+
+	/**
+	 * Gets the thread source for the specified conversation and thread.
+	 *
+	 * @param conversationID
+	 * @param threadID
+	 * @return String
+	 * @throws ApiException
+	 */
+	public String getThreadSource(Long conversationID, Long threadID) throws ApiException {
 		if (conversationID == null || conversationID < 1) {
 			throw new ApiException("Invalid conversationID in getThreadSource");
 		}
 		if (threadID == null || threadID < 1) {
 			throw new ApiException("Invalid threadID in getThreadSource");
 		}
+		String url = "conversations/" + conversationID + "/thread-source/" + threadID + ".json";
 		String json;
 		try {
-			json = doGet("conversations/" + conversationID + "/thread-source/" + threadID + ".json", HTTP_STATUS_OK);
+			json = doGet(url, HTTP_STATUS_OK);
 		} catch(RuntimeException e) {
 			if (e.getCause() instanceof NotFoundException) {
 				json = null;
@@ -370,59 +602,89 @@ public class ApiClient {
 			}
 		}
 		if (json != null) {
-			JsonElement obj = (new JsonParser()).parse(json);
+			JsonElement obj = parseJson(url, json);
 			JsonElement elem  = obj.getAsJsonObject().get("item");
-			return getDecoded(elem.getAsJsonObject().get("data").getAsString());
+			return new String(getDecoded(elem.getAsJsonObject().get("data").getAsString()));
 		} 
 		return null;
 	}
 
-    /**
-     * Gets the attachment data for the specified attachment id.
-     *
-     * @param attachmentID
-     * @return String
-     * @throws ApiException
-     */
+	private JsonElement parseJson(String url, String json) {
+		LoggerFactory.getLogger(getClass()).trace("{}: {}", url, json);
+		JsonElement obj = (new JsonParser()).parse(json);
+		return obj;
+	}
+
+	/**
+	 * Gets the attachment data for the specified attachment id.
+	 *
+	 * @param attachmentID
+	 * @return String
+	 * @throws ApiException
+	 * @deprecated use {@link #getAttachmentData(Long)}
+	 */
 	public String getAttachmentData(Integer attachmentID) throws ApiException {
+		return getAttachmentData(Long.valueOf(attachmentID));
+	}
+
+	/**
+	 * Gets the attachment data for the specified attachment id.
+	 *
+	 * @param attachmentID
+	 * @return String
+	 * @throws ApiException
+	 */
+	public String getAttachmentData(Long attachmentID) throws ApiException {
+		return new String(getAttachmentBinaryData(attachmentID));
+	}
+
+	/**
+	 * Gets the attachment data for the specified attachment id.
+	 *
+	 * @param attachmentID
+	 * @return String
+	 * @throws ApiException
+	 */
+	public byte[] getAttachmentBinaryData(Long attachmentID) throws ApiException {
 		if (attachmentID == null || attachmentID < 1) {
 			throw new ApiException("Invalid attachmentID in getAttachmentData");
 		}
-		String json = doGet("attachments/" + attachmentID + "/data.json", HTTP_STATUS_OK);
-		JsonElement obj = (new JsonParser()).parse(json);
+		String url = "attachments/" + attachmentID + "/data.json";
+		String json = doGet(url, HTTP_STATUS_OK);
+		JsonElement obj = parseJson(url, json);
 		JsonElement elem  = obj.getAsJsonObject().get("item");
 		return getDecoded(elem.getAsJsonObject().get("data").getAsString());
 	}
 
-    /**
-     * Gets a page of all tags.
-     *
-     * @param queryParams
-     * @return Page
-     * @throws ApiException
-     */
-    public Page getTags(Map<String,String> queryParams) throws ApiException {
-        return getPage("tags.json", queryParams, Tag.class, HTTP_STATUS_OK);
-    }
-
-    /**
-     * Gets the first page of customers.
-     *
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getCustomers() throws ApiException {
-		return getCustomers(new Integer(null));
+	/**
+	 * Gets a page of all tags.
+	 *
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Tag> getTags(Map<String, String> queryParams) throws ApiException {
+		return getPage("tags.json", queryParams, Tag.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets a page of customers.
-     *
-     * @param page
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getCustomers(Integer page) throws ApiException {
+	/**
+	 * Gets the first page of customers.
+	 *
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Customer> getCustomers() throws ApiException {
+		return getCustomers((Integer) null);
+	}
+
+	/**
+	 * Gets a page of customers.
+	 *
+	 * @param page
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Customer> getCustomers(Integer page) throws ApiException {
 		if (page != null) {
 			return getPage("customers.json?page=" + page, Customer.class, HTTP_STATUS_OK);
 		} else {
@@ -430,28 +692,28 @@ public class ApiClient {
 		}
 	}
 
-    /**
-     * Gets the first page of customers.
-     *
-     * @param fields
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getCustomers(List<String> fields) throws ApiException {
+	/**
+	 * Gets the first page of customers.
+	 *
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Customer> getCustomers(List<String> fields) throws ApiException {
 		String url = setFields("customers.json", fields);
 		return getPage(url, Customer.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets a page of customers.
-     *
-     * @param mailboxId
-     * @param page
-     * @param fields
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getCustomersForMailbox(Long mailboxId, Integer page, List<String> fields) throws ApiException {
+	/**
+	 * Gets a page of customers.
+	 *
+	 * @param mailboxId
+	 * @param page
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Customer> getCustomersForMailbox(Long mailboxId, Integer page, List<String> fields) throws ApiException {
 		StringBuilder sbUrl = new StringBuilder();
 		sbUrl.append("mailboxes/").append(mailboxId).append("/customers.json");
 		if (page != null) {
@@ -461,257 +723,322 @@ public class ApiClient {
 		return getPage(url, Customer.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Searches for the first page of customers using any combination of email, firstName, lastName.
-     *
-     * @param email
-     * @param firstName
-     * @param lastName
-     * @return Page
-     * @throws ApiException
-     */
-	public Page searchCustomers(String email, String firstName, String lastName) throws ApiException {
+	/**
+	 * Searches for the first page of customers using any combination of email,
+	 * firstName, lastName.
+	 *
+	 * @param email
+	 * @param firstName
+	 * @param lastName
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Customer> searchCustomers(String email, String firstName, String lastName) throws ApiException {
 		return searchCustomers(email, firstName, lastName, null, null);
 	}
 
-    /**
-     * Returns a page of customers by searching on any combination of email, firstName, lastName.
-     *
-     * @param email
-     * @param firstName
-     * @param lastName
-     * @param page
-     * @param fields
-     * @return Page
-     * @throws ApiException
-     */
-	public Page searchCustomers(String email, String firstName, String lastName, Integer page,
-			List<String> fields) throws ApiException {
-        Map<String,String> params = getCustomerSearchParams(email, firstName, lastName, page);
-        String url = setFields("customers.json", fields);
+	/**
+	 * Returns a page of customers by searching on any combination of email,
+	 * firstName, lastName.
+	 *
+	 * @param email
+	 * @param firstName
+	 * @param lastName
+	 * @param page
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Customer> searchCustomers(String email, String firstName, String lastName, Integer page, List<String> fields) throws ApiException {
+		Map<String, String> params = getCustomerSearchParams(email, firstName, lastName, page);
+		String url = setFields("customers.json", fields);
 		return getPage(url, params, Customer.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Returns a page of SearchConversation objects by searching using the query.
-     *
-     * @param query
-     * @param sortField
-     * @param sortOrder
-     * @param page
-     * @return Page
-     * @throws ApiException
-     */
-    public Page searchConversations(String query, String sortField, String sortOrder, Integer page) throws ApiException {
-        Map<String,String> params = new HashMap<String,String>();
-        params.put("query", query);
-        if (sortField != null && sortField.trim().length() > 0) {
-            params.put("sortField", sortField);
-        }
-        if (sortOrder != null && sortOrder.trim().length() > 0) {
-            params.put("sortOrder", sortOrder);
-        }
-        params.put("page", String.valueOf(page));
-        return getPage("search/conversations.json", params, SearchConversation.class, HTTP_STATUS_OK);
-    }
-
-    /**
-     * Returns a page of SearchCustomer objects by searching using the query.
-     *
-     * @param query
-     * @param sortField
-     * @param sortOrder
-     * @param page
-     * @return Page
-     * @throws ApiException
-     */
-    public Page searchCustomers(String query, String sortField, String sortOrder, Integer page) throws ApiException {
-        Map<String,String> params = new HashMap<String,String>();
-        params.put("query", query);
-        if (sortField != null && sortField.trim().length() > 0) {
-            params.put("sortField", sortField);
-        }
-        if (sortOrder != null && sortOrder.trim().length() > 0) {
-            params.put("sortOrder", sortOrder);
-        }
-        params.put("page", String.valueOf(page));
-        return getPage("search/customers.json", params, SearchCustomer.class, HTTP_STATUS_OK);
-    }
-
-    /**
-     * Gets the customer with the specified id.
-     *
-     * @param customerId
-     * @return Customer
-     * @throws ApiException
-     */
-	public Customer getCustomer(Long customerId) throws ApiException {
-		return (Customer)getItem("customers/" + customerId + ".json", Customer.class, HTTP_STATUS_OK);
+	/**
+	 * Returns a page of SearchConversation objects by searching using the
+	 * query.
+	 *
+	 * @param query
+	 * @param sortField
+	 * @param sortOrder
+	 * @param page
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<SearchConversation> searchConversations(String query, String sortField, String sortOrder, Integer page) throws ApiException {
+		Map<String, String> params = new HashMap<String, String>();
+		params.put("query", query);
+		if (sortField != null && sortField.trim().length() > 0) {
+			params.put("sortField", sortField);
+		}
+		if (sortOrder != null && sortOrder.trim().length() > 0) {
+			params.put("sortOrder", sortOrder);
+		}
+		params.put("page", String.valueOf(page));
+		return getPage("search/conversations.json", params, SearchConversation.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the customer with the specified id.
-     *
-     * @param customerId
-     * @param fields
-     * @return Customer
-     * @throws ApiException
-     */
+	/**
+	 * Returns a page of SearchCustomer objects by searching using the query.
+	 *
+	 * @param query
+	 * @param sortField
+	 * @param sortOrder
+	 * @param page
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<SearchCustomer> searchCustomers(String query, String sortField, String sortOrder, Integer page) throws ApiException {
+		Map<String, String> params = new HashMap<String, String>();
+		params.put("query", query);
+		if (sortField != null && sortField.trim().length() > 0) {
+			params.put("sortField", sortField);
+		}
+		if (sortOrder != null && sortOrder.trim().length() > 0) {
+			params.put("sortOrder", sortOrder);
+		}
+		params.put("page", String.valueOf(page));
+		return getPage("search/customers.json", params, SearchCustomer.class, HTTP_STATUS_OK);
+	}
+
+	/**
+	 * Gets the customer with the specified id.
+	 *
+	 * @param customerId
+	 * @return Customer
+	 * @throws ApiException
+	 */
+	public Customer getCustomer(Long customerId) throws ApiException {
+		return getItem("customers/" + customerId + ".json", Customer.class, HTTP_STATUS_OK);
+	}
+
+	/**
+	 * Gets the customer with the specified id.
+	 *
+	 * @param customerId
+	 * @param fields
+	 * @return Customer
+	 * @throws ApiException
+	 */
 	public Customer getCustomer(Long customerId, List<String> fields) throws ApiException {
 		if (customerId == null || customerId < 1) {
 			throw new ApiException("Invalid customerId in getCustomer");
 		}
 		String url = setFields("customers/" + customerId + ".json", fields);
-		return (Customer)getItem(url, Customer.class, HTTP_STATUS_OK);
+		return getItem(url, Customer.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the user associated with the API key used to make the request.
-     *
-     * @return User
-     * @throws ApiException
-     */
-    public User getUserMe() throws ApiException {
-        return (User)getItem("users/me.json", User.class, HTTP_STATUS_OK);
-    }
+	/**
+	 * Gets the user associated with the API key used to make the request.
+	 *
+	 * @return User
+	 * @throws ApiException
+	 */
+	public User getUserMe() throws ApiException {
+		return getItem("users/me.json", User.class, HTTP_STATUS_OK);
+	}
 
-    /**
-     * Gets the user with the specified id.
-     *
-     * @param userID
-     * @return User
-     * @throws ApiException
-     */
+	/**
+	 * Gets the user with the specified id.
+	 *
+	 * @param userID
+	 * @return User
+	 * @throws ApiException
+	 * @deprecated use {@link #getUser(Long)}
+	 */
 	public User getUser(Integer userID) throws ApiException {
-		return (User)getItem("users/" + userID + ".json", User.class, HTTP_STATUS_OK);
+		return getUser(Long.valueOf(userID));
 	}
 
-    /**
-     * Gets the user with the specified id.
-     *
-     * @param userID
-     * @param fields
-     * @return User
-     * @throws ApiException
-     */
+	/**
+	 * Gets the user with the specified id.
+	 *
+	 * @param userID
+	 * @return User
+	 * @throws ApiException
+	 */
+	public User getUser(Long userID) throws ApiException {
+		return getItem("users/" + userID + ".json", User.class, HTTP_STATUS_OK);
+	}
+
+	/**
+	 * Gets the user with the specified id.
+	 *
+	 * @param userID
+	 * @param fields
+	 * @return User
+	 * @throws ApiException
+	 * @deprecated use {@link #getUser(Long, List)}
+	 */
 	public User getUser(Integer userID, List<String> fields) throws ApiException {
+		return getUser(Long.valueOf(userID), fields);
+	}
+
+	/**
+	 * Gets the user with the specified id.
+	 *
+	 * @param userID
+	 * @param fields
+	 * @return User
+	 * @throws ApiException
+	 */
+	public User getUser(Long userID, List<String> fields) throws ApiException {
 		if (userID == null || userID < 1) {
 			throw new ApiException("Invalid userId in getUser");
 		}
 		String url = setFields("users/" + userID + ".json", fields);
-		return (User)getItem(url, User.class, HTTP_STATUS_OK);
+		return getItem(url, User.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the first page of users.
-     *
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getUsers() throws ApiException {
+	/**
+	 * Gets the first page of users.
+	 *
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<User> getUsers() throws ApiException {
 		return getPage("users.json", User.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the first page of users.
-     *
-     * @param fields
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getUsers(List<String> fields) throws ApiException {
+	/**
+	 * Gets the first page of users.
+	 *
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<User> getUsers(List<String> fields) throws ApiException {
 		String url = setFields("users.json", fields);
 		return getPage(url, User.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets a page of users.
-     *
-     * @param queryParams
-     * @return Page
-     * @throws ApiException
-     */
-    public Page getUsers(Map<String, String> queryParams) throws ApiException {
-        return getPage("/users.json", queryParams, User.class, HTTP_STATUS_OK);
-    }
+	/**
+	 * Gets a page of users.
+	 *
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<User> getUsers(Map<String, String> queryParams) throws ApiException {
+		return getPage("/users.json", queryParams, User.class, HTTP_STATUS_OK);
+	}
 
-    /**
-     * Gets the first page of users for the specified mailbox.
-     *
-     * @param mailboxId
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getUsersForMailbox(Integer mailboxId) throws ApiException {
+	/**
+	 * Gets the first page of users for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getUsersForMailbox(Long)}
+	 */
+	public Page<User> getUsersForMailbox(Integer mailboxId) throws ApiException {
+		return getUsersForMailbox(Long.valueOf(mailboxId));
+	}
+
+	/**
+	 * Gets the first page of users for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<User> getUsersForMailbox(Long mailboxId) throws ApiException {
 		return getPage("mailboxes/" + mailboxId + "/users.json", User.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets the first page of users for the specified mailbox.
-     *
-     * @param mailboxId
-     * @param fields
-     * @return Page
-     * @throws ApiException
-     */
-	public Page getUsersForMailbox(Integer mailboxId, List<String> fields) throws ApiException {
+	/**
+	 * Gets the first page of users for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getUsersForMailbox(Long, List)}
+	 */
+	public Page<User> getUsersForMailbox(Integer mailboxId, List<String> fields) throws ApiException {
+		return getUsersForMailbox(Long.valueOf(mailboxId), fields);
+	}
+
+	/**
+	 * Gets the first page of users for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @param fields
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<User> getUsersForMailbox(Long mailboxId, List<String> fields) throws ApiException {
 		String url = setFields("mailboxes/" + mailboxId + "/users.json", fields);
 		return getPage(url, User.class, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Gets a page of users for the specified mailbox.
-     *
-     * @param mailboxId
-     * @param queryParams
-     * @return Page
-     * @throws ApiException
-     */
-    public Page getUsersForMailbox(Integer mailboxId, Map<String, String> queryParams) throws ApiException {
-        return getPage("mailboxes/" + mailboxId + "/users.json", queryParams, User.class, HTTP_STATUS_OK);
-    }
+	/**
+	 * Gets a page of users for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 * @deprecated use {@link #getUsersForMailbox(Long, Map)}
+	 */
+	public Page<User> getUsersForMailbox(Integer mailboxId, Map<String, String> queryParams) throws ApiException {
+		return getUsersForMailbox(Long.valueOf(mailboxId), queryParams);
+	}
 
-    /**
-     * Creates a new customer.
-     *
-     * @param customer
-     * @throws ApiException
-     */
+	/**
+	 * Gets a page of users for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<User> getUsersForMailbox(Long mailboxId, Map<String, String> queryParams) throws ApiException {
+		return getPage("mailboxes/" + mailboxId + "/users.json", queryParams, User.class, HTTP_STATUS_OK);
+	}
+
+	/**
+	 * Creates a new customer.
+	 *
+	 * @param customer
+	 * @throws ApiException
+	 */
 	public void createCustomer(Customer customer) throws ApiException {
 		String json = new Gson().toJson(customer);
-		Long id = (Long)doPost("customers.json", json, HTTP_STATUS_CREATED);
+		Long id = doPost("customers.json", json, HTTP_STATUS_CREATED, idExtractor);
 		customer.setId(id);
 	}
 
-    /**
-     * Updates an existing customer.
-     *
-     * @param customer
-     * @throws ApiException
-     */
+	/**
+	 * Updates an existing customer.
+	 *
+	 * @param customer
+	 * @throws ApiException
+	 */
 	public void updateCustomer(Customer customer) throws ApiException {
 		GsonBuilder builder = new GsonBuilder().setDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'");
 		String json = builder.create().toJson(customer, Customer.class);
 		doPut("customers/" + customer.getId() + ".json", json, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Creates a new conversations.
-     *
-     * @param conversation
-     * @throws ApiException
-     */
+	/**
+	 * Creates a new conversations.
+	 *
+	 * @param conversation
+	 * @throws ApiException
+	 */
 	public void createConversation(Conversation conversation) throws ApiException {
 		createConversation(conversation, false);
 	}
 
-    /**
-     * Creates a new conversation.
-     *
-     * @param conversation
-     * @param imported
-     * @throws ApiException
-     */
+	/**
+	 * Creates a new conversation.
+	 *
+	 * @param conversation
+	 * @param imported
+	 * @throws ApiException
+	 */
 	public void createConversation(Conversation conversation, boolean imported) throws ApiException {
 		GsonBuilder builder = new GsonBuilder().setDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'")
 				.registerTypeAdapter(ThreadState.class, new ThreadStateAdapter())
@@ -727,29 +1054,29 @@ public class ApiClient {
 			url.append("?imported=true");
 		}
 
-		Long id = (Long)doPost(url.toString(), json, HTTP_STATUS_CREATED);
+		Long id = doPost(url.toString(), json, HTTP_STATUS_CREATED, idExtractor);
 		conversation.setId(id);
 	}
 
-    /**
-     * Creates a new thread on the specified conversation.
-     *
-     * @param conversationId
-     * @param thread
-     * @throws ApiException
-     */
+	/**
+	 * Creates a new thread on the specified conversation.
+	 *
+	 * @param conversationId
+	 * @param thread
+	 * @throws ApiException
+	 */
 	public void createConversationThread(Long conversationId, ConversationThread thread) throws ApiException {
 		createConversationThread(conversationId, thread, false);
 	}
 
-    /**
-     * Creates a new thread on the specified conversation.
-     *
-     * @param conversationId
-     * @param thread
-     * @param imported
-     * @throws ApiException
-     */
+	/**
+	 * Creates a new thread on the specified conversation.
+	 *
+	 * @param conversationId
+	 * @param thread
+	 * @param imported
+	 * @throws ApiException
+	 */
 	public void createConversationThread(Long conversationId, ConversationThread thread, boolean imported) throws ApiException {
 		try {
 			setThreadProperties(thread);
@@ -766,49 +1093,49 @@ public class ApiClient {
 				url.append("?imported=true");
 			}
 
-			doPost(url.toString(), json, HTTP_STATUS_CREATED);
+			doPost(url.toString(), json, HTTP_STATUS_CREATED, idExtractor);
 		} catch (Exception ex) {
 			ex.printStackTrace();
 			throw new ApiException(ex.getMessage());
 		}
 	}
 
-    /**
-     * Update the body text of the specified thread.
-     *
-     * @param conversationId
-     * @param threadId
-     * @param text
-     * @return
-     * @throws ApiException
-     */
-    public void updateConversationThreadText(Long conversationId, Long threadId, String text) throws ApiException {
-        Map<String,String> threadBody = new HashMap<String, String>();
-        threadBody.put("body", text);
+	/**
+	 * Update the body text of the specified thread.
+	 *
+	 * @param conversationId
+	 * @param threadId
+	 * @param text
+	 * @return
+	 * @throws ApiException
+	 */
+	public void updateConversationThreadText(Long conversationId, Long threadId, String text) throws ApiException {
+		Map<String, String> threadBody = new HashMap<String, String>();
+		threadBody.put("body", text);
 
-        GsonBuilder builder = new GsonBuilder();
-        String json = builder.create().toJson(threadBody);
+		GsonBuilder builder = new GsonBuilder();
+		String json = builder.create().toJson(threadBody);
 
-        doPut("conversations/" + conversationId + "/threads/" + threadId +  ".json", json, HTTP_STATUS_OK);
-    }
+		doPut("conversations/" + conversationId + "/threads/" + threadId + ".json", json, HTTP_STATUS_OK);
+	}
 
-    /**
-     * Deletes the specified conversation.
-     *
-     * @param id
-     * @throws ApiException
-     */
+	/**
+	 * Deletes the specified conversation.
+	 *
+	 * @param id
+	 * @throws ApiException
+	 */
 	public void deleteConversation(Long id) throws ApiException {
 		String url = "conversations/" + id + ".json";
 		doDelete(url, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Updates the specified conversation.
-     *
-     * @param conversation
-     * @throws ApiException
-     */
+	/**
+	 * Updates the specified conversation.
+	 *
+	 * @param conversation
+	 * @throws ApiException
+	 */
 	public void updateConversation(Conversation conversation) throws ApiException {
 		GsonBuilder builder = new GsonBuilder()
 				.setDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'")
@@ -829,81 +1156,83 @@ public class ApiClient {
 	 */
 	public void createAttachment(Attachment attachment) throws ApiException {
 		String json = new Gson().toJson(attachment);
-		String hash = (String)doPost("attachments.json", json, HTTP_STATUS_CREATED);
+		String hash = doPost("attachments.json", json, HTTP_STATUS_CREATED, hashExtractor);
 		attachment.setHash(hash);
 	}
 
-    /**
-     * Deletes an attachment.
-     *
-     * @param id
-     * @throws ApiException
-     */
+	/**
+	 * Deletes an attachment.
+	 *
+	 * @param id
+	 * @throws ApiException
+	 */
 	public void deleteAttachment(Long id) throws ApiException {
 		String url = "attachments/" + id + ".json";
 		doDelete(url, HTTP_STATUS_OK);
 	}
 
-    /**
-     * Deletes a note thread.
-     *
-     * @param threadId
-     * @throws ApiException
-     */
-    public void deleteNote(Long threadId) throws ApiException {
-        String url = "notes/" + threadId + ".json";
-        doDelete(url, HTTP_STATUS_OK);
-    }
+	/**
+	 * Deletes a note thread.
+	 *
+	 * @param threadId
+	 * @throws ApiException
+	 */
+	public void deleteNote(Long threadId) throws ApiException {
+		String url = "notes/" + threadId + ".json";
+		doDelete(url, HTTP_STATUS_OK);
+	}
 
-    /**
-     * Finds the first page of workflows associated with the specified mailbox id.
-     *
-     * @param mailboxId the id of the mailbox
-     * @return a Page of Workflow objects
-     * @throws ApiException
-     */
-    public Page getWorkflows(Long mailboxId) throws ApiException {
-        return getPage("mailboxes/" + mailboxId + "/workflows.json", Workflow.class, HTTP_STATUS_OK);
-    }
+	/**
+	 * Finds the first page of workflows associated with the specified mailbox
+	 * id.
+	 *
+	 * @param mailboxId
+	 *            the id of the mailbox
+	 * @return a Page of Workflow objects
+	 * @throws ApiException
+	 */
+	public Page<Workflow> getWorkflows(Long mailboxId) throws ApiException {
+		return getPage("mailboxes/" + mailboxId + "/workflows.json", Workflow.class, HTTP_STATUS_OK);
+	}
 
-    /**
-     * Get a page of workflows for the specified mailbox.
-     *
-     * @param mailboxId
-     * @param queryParams
-     * @return Page
-     * @throws ApiException
-     */
-    public Page getWorkflows(Long mailboxId, Map<String, String> queryParams) throws ApiException {
-        return getPage("mailboxes/" + mailboxId + "/workflows.json", queryParams, Workflow.class, HTTP_STATUS_OK);
-    }
+	/**
+	 * Get a page of workflows for the specified mailbox.
+	 *
+	 * @param mailboxId
+	 * @param queryParams
+	 * @return Page
+	 * @throws ApiException
+	 */
+	public Page<Workflow> getWorkflows(Long mailboxId, Map<String, String> queryParams) throws ApiException {
+		return getPage("mailboxes/" + mailboxId + "/workflows.json", queryParams, Workflow.class, HTTP_STATUS_OK);
+	}
 
-    /**
-     * Runs the specified manual workflow on the specified ticket.
-     *
-     * @param id
-     * @param ticketId
-     * @throws ApiException
-     */
-    public void runManualWorkflow(Long id, Long ticketId) throws ApiException {
-        doPost("workflows/" + id + "/conversations/" + ticketId + ".json", null, HTTP_STATUS_OK);
-    }
+	/**
+	 * Runs the specified manual workflow on the specified ticket.
+	 *
+	 * @param id
+	 * @param ticketId
+	 * @throws ApiException
+	 */
+	public void runManualWorkflow(Long id, Long ticketId) throws ApiException {
+		doPost("workflows/" + id + "/conversations/" + ticketId + ".json", null, HTTP_STATUS_OK, idExtractor);
+	}
 
-    /**
-     * Runs the specified manual workflow on the specified tickets.
-     *
-     * @param id
-     * @param ticketIds
-     * @throws ApiException
-     */
-    public void runManualWorkflow(Long id, Collection<Long> ticketIds) throws ApiException {
-        JsonElement tickets = new Gson().toJsonTree(ticketIds);
-        JsonObject obj = new JsonObject();
-        obj.add("conversationIds", tickets);
-        String json = new Gson().toJson(obj);
-        doPost("workflows/" + id + "/conversations.json", json, HTTP_STATUS_OK);
-    }
-    
+	/**
+	 * Runs the specified manual workflow on the specified tickets.
+	 *
+	 * @param id
+	 * @param ticketIds
+	 * @throws ApiException
+	 */
+	public void runManualWorkflow(Long id, Collection<Long> ticketIds) throws ApiException {
+		JsonElement tickets = new Gson().toJsonTree(ticketIds);
+		JsonObject obj = new JsonObject();
+		obj.add("conversationIds", tickets);
+		String json = new Gson().toJson(obj);
+		doPost("workflows/" + id + "/conversations.json", json, HTTP_STATUS_OK, idExtractor);
+	}
+	
     public ConversationsReport getConversationsReport(Map<String, String> queryParams) throws ApiException {
         String url = setParams("reports/conversations.json", queryParams);
         return getObject(url, ConversationsReport.class);
@@ -1065,22 +1394,22 @@ public class ApiClient {
 		}
 	}
 
-    private String setParams(String url, Map<String,String> params) {
-        if (params != null && params.size() > 0) {
-            StringBuilder sb = new StringBuilder();
-            sb.append(url);
-            for (String key : params.keySet()) {
-                if (sb.indexOf("?") > 0) {
-                    sb.append("&");
-                } else {
-                    sb.append("?");
-                }
-                sb.append(key).append("=").append(params.get(key));
-            }
-            return sb.toString();
-        }
-        return url;
-    }
+	private String setParams(String url, Map<String, String> params) {
+		if (params != null && params.size() > 0) {
+			StringBuilder sb = new StringBuilder();
+			sb.append(url);
+			for (String key : params.keySet()) {
+				if (sb.indexOf("?") > 0) {
+					sb.append("&");
+				} else {
+					sb.append("?");
+				}
+				sb.append(key).append("=").append(params.get(key));
+			}
+			return sb.toString();
+		}
+		return url;
+	}
 
 	private String setFields(String url, List<String> fields) {
 		if (fields != null && fields.size() > 0) {
@@ -1103,62 +1432,24 @@ public class ApiClient {
 		return url;
 	}
 
-    private Map<String,String> getCustomerSearchParams(String email, String firstName, String lastName, Integer page) {
-        Map<String,String> params = new HashMap<String,String>();
-        if (email != null && email.trim().length() > 0) {
-            params.put("email", email.trim().toLowerCase());
-        }
-
-        if (firstName != null && firstName.trim().length() > 0) {
-            params.put("firstName", firstName.trim());
-        }
-
-        if (lastName != null && lastName.trim().length() > 0) {
-            params.put("lastName", lastName.trim());
-        }
-
-        if (page != null && page > 0) {
-            params.put("page", String.valueOf(page));
-        }
-        return params;
-    }
-
-	private void addSearchParams(StringBuilder url, String email, String firstName, String lastName, Integer page) {
+	private Map<String, String> getCustomerSearchParams(String email, String firstName, String lastName, Integer page) {
+		Map<String, String> params = new HashMap<String, String>();
 		if (email != null && email.trim().length() > 0) {
-			if (url.toString().indexOf("?") > 0) {
-				url.append("&");
-			} else {
-				url.append("?");
-			}
-			url.append("email=").append(email.trim());
+			params.put("email", email.trim().toLowerCase());
 		}
 
 		if (firstName != null && firstName.trim().length() > 0) {
-			if (url.toString().indexOf("?") > 0) {
-				url.append("&");
-			} else {
-				url.append("?");
-			}
-			url.append("firstName=").append(firstName.trim());
+			params.put("firstName", firstName.trim());
 		}
 
 		if (lastName != null && lastName.trim().length() > 0) {
-			if (url.toString().indexOf("?") > 0) {
-				url.append("&");
-			} else {
-				url.append("?");
-			}
-			url.append("lastName=").append(lastName.trim());
+			params.put("lastName", lastName.trim());
 		}
 
-		if (page != null) {
-			if (url.toString().indexOf("?") > 0) {
-				url.append("&");
-			} else {
-				url.append("?");
-			}
-			url.append("page=").append(page);
+		if (page != null && page > 0) {
+			params.put("page", String.valueOf(page));
 		}
+		return params;
 	}
 	
 	private <T> T getObject(String url, Class<T> clazzType) throws ApiException {
@@ -1166,39 +1457,39 @@ public class ApiClient {
         return Parser.getInstance().getObject(json, clazzType);	    
 	}
 
-	private Object getItem(String url, Class<?> clazzType, int expectedCode) throws ApiException {
+	private <T> T getItem(String url, Class<T> clazzType, int expectedCode) throws ApiException {
 		String json = doGet(url, expectedCode);
-		JsonElement obj  = (new JsonParser()).parse(json);
+		JsonElement obj = parseJson(url, json);
 		JsonElement item = obj.getAsJsonObject().get("item");
 
 		return Parser.getInstance().getObject(item, clazzType);
 	}
 	
-    private Page getPage(String url, Class<?> clazzType, int expectedCode) throws ApiException {
+    private <T> Page<T> getPage(String url, Class<T> clazzType, int expectedCode) throws ApiException {
         return getPage(url, null, clazzType, expectedCode);
     }
 	
-	private Page getPage(String url, Class<?> clazzType, String wrapperObjectName) throws ApiException {
+	private <T> Page<T> getPage(String url, Class<T> clazzType, String wrapperObjectName) throws ApiException {
         String json = doGet(url, HTTP_STATUS_OK);
 
-        JsonObject outerObj = new JsonParser().parse(json).getAsJsonObject();
+        JsonObject outerObj = parseJson(url, json).getAsJsonObject();
         JsonObject innerObj = outerObj.get(wrapperObjectName).getAsJsonObject();
         
         return objectToPage(innerObj, clazzType);
 	}
 
-    private Page getPage(String url, Map<String,String> params, Class<?> clazzType, int expectedCode) throws ApiException {
+    private <T> Page<T> getPage(String url, Map<String,String> params, Class<T> clazzType, int expectedCode) throws ApiException {
         url = setParams(url, params);
         String json = doGet(url, HTTP_STATUS_OK);
-        JsonElement obj = (new JsonParser()).parse(json);
+        JsonElement obj = parseJson(url, json);
         
         return objectToPage(obj.getAsJsonObject(), clazzType);
     }
     
-    private Page objectToPage(JsonObject obj, Class<?> clazzType) {
+    private <T> Page<T> objectToPage(JsonObject obj, Class<T> clazzType) {
         Set<Map.Entry<String, JsonElement>> set = obj.entrySet();
 
-        Page p = new Page();
+        Page<T> p = new Page<T>();
 
         for (Map.Entry<String, JsonElement> a : set) {
             String key = a.getKey();
@@ -1223,22 +1514,23 @@ public class ApiClient {
         return p;
     }
 
-	private <T> ArrayList<T> getPageItems(JsonElement elem, Class<T> clazzType) {		
-		JsonArray ar = elem.getAsJsonArray();
-		ArrayList<T> col = new ArrayList<T>(ar.size());
-		for(JsonElement e : ar) {
-            T o = Parser.getInstance().getObject(e, clazzType);
-			if (o != null) {
-				col.add(o);
-			}
-		}
-		return col;
-	}
+    private <T> ArrayList<T> getPageItems(JsonElement elem, Class<T> clazzType) {
+        JsonArray ar = elem.getAsJsonArray();
+        ArrayList<T> col = new ArrayList<T>(ar.size());
+        for (JsonElement e : ar) {
+            @SuppressWarnings("unchecked")
+            T o = (T) Parser.getInstance().getObject(e, clazzType);
+            if (o != null) {
+                col.add(o);
+            }
+        }
+        return col;
+    }
 
-	private Object doPost(String url, String requestBody, int expectedCode) throws ApiException {
+	private <T> T doPost(String url, String requestBody, int expectedCode, ResultExtractor<T> extractor) throws ApiException {
 		HttpURLConnection conn = null;
 		try {
-		    conn = getConnection(apiKey, url, METHOD_POST, requestBody != null);
+			conn = getConnection(apiKey, url, METHOD_POST, requestBody != null);
 
 			if (requestBody != null) {
 				conn.setDoOutput(true);
@@ -1254,12 +1546,7 @@ public class ApiClient {
 			}
 			conn.connect();
 			checkStatusCode(conn, expectedCode);
-
-			if (url.equals("attachments.json")) {
-				return getAttachmentHashFromPost(conn);
-			} else {
-				return getIdFromPost(conn);
-			}
+			return extractor.extract(conn);
 		} catch (Exception ex) {
 			throw new RuntimeException(ex);
 		} finally {
@@ -1267,34 +1554,43 @@ public class ApiClient {
 		}
 	}
 
-	private Long getIdFromPost(HttpURLConnection conn) {
-		String location = conn.getHeaderField("LOCATION");
-		if (location != null && location.trim().length() > 0) {
-			return new Long(location.substring(location.lastIndexOf("/") + 1, location.lastIndexOf(".")));
-		} else {
-			return null;
+	private final ResultExtractor<Long> idExtractor = new ResultExtractor<Long>() {
+		public Long extract(HttpURLConnection conn) {
+			String location = conn.getHeaderField("LOCATION");
+			if (location != null && location.trim().length() > 0) {
+				return new Long(location.substring(
+						location.lastIndexOf("/") + 1,
+						location.lastIndexOf(".")));
+			} else {
+				return null;
+			}
 		}
-	}
+	};
 
-	private String getAttachmentHashFromPost(HttpURLConnection conn) throws RuntimeException {
-		String hash = null;
-		BufferedReader br = null;
-		String response;
-		try {
-			br = new BufferedReader(new InputStreamReader((getInputStream(conn)), Charset.forName("UTF8")));
-			response = getResponse(br);
-			JsonElement obj  = (new JsonParser()).parse(response);
-			JsonElement item = obj.getAsJsonObject().get("item");
-			hash = item.getAsJsonObject().get("hash").getAsString();
-		}  catch(Exception e) {
-			e.printStackTrace();
-			throw new RuntimeException(e);
-		} finally {
-			close(br);
-			close(conn);
+	private final ResultExtractor<String> hashExtractor = new ResultExtractor<String>() {
+		public String extract(HttpURLConnection conn) {
+			String hash = null;
+			BufferedReader br = null;
+			String response;
+			try {
+				br = new BufferedReader(new InputStreamReader(
+						(getInputStream(conn)), Charset.forName("UTF8")));
+				response = getResponse(br);
+				LoggerFactory.getLogger(getClass()).debug("attachment: {}",
+						response);
+				JsonElement obj = (new JsonParser()).parse(response);
+				JsonElement item = obj.getAsJsonObject().get("item");
+				hash = item.getAsJsonObject().get("hash").getAsString();
+			} catch (Exception e) {
+				e.printStackTrace();
+				throw new RuntimeException(e);
+			} finally {
+				close(br);
+				close(conn);
+			}
+			return hash;
 		}
-		return hash;
-	}
+	};
 
 	private void doPut(String url, String requestBody, int expectedCode) throws ApiException {
 		HttpURLConnection conn = null;
@@ -1407,12 +1703,12 @@ public class ApiClient {
 	private String getResponse(BufferedReader reader) throws IOException {
 		StringBuilder sb = new StringBuilder();
 
-    	String line;
-    	while ((line = reader.readLine()) != null) {
-    		sb.append(line);
-    	}
+		String line;
+		while ((line = reader.readLine()) != null) {
+			sb.append(line);
+		}
 
-    	return sb.toString();
+		return sb.toString();
 	}
 
 	private void close(HttpURLConnection conn) {
@@ -1424,18 +1720,19 @@ public class ApiClient {
 			}
 		}
 	}
+
 	private void close(BufferedReader reader) {
 		if (reader != null) {
-    		try {
-    			reader.close();
+			try {
+				reader.close();
 			} catch (IOException e) {
 				// ignore
 			}
-    	}
+		}
 	}
 
 	private InputStream getInputStream(HttpURLConnection conn) throws IOException {
-        String encoding = conn.getContentEncoding();
+		String encoding = conn.getContentEncoding();
 
 		InputStream inputStream = null;
 
@@ -1455,17 +1752,14 @@ public class ApiClient {
 	}
 
 	private String getEncoded(String val) {
-		return (new BASE64Encoder()).encode(val.getBytes());
+		try {
+			return Base64.encodeBase64String(val.getBytes("UTF-8"));
+		} catch (UnsupportedEncodingException e) {
+			throw new IllegalStateException("UTF-8 should always be there!", e);
+		}
 	}
 
-	private String getDecoded(String val) {
-		BASE64Decoder decoder = new BASE64Decoder();
-		try {
-			return new String(decoder.decodeBuffer(val));
-		} catch (IOException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
-		return null;
+	private byte[] getDecoded(String val) {
+		return Base64.decodeBase64(val);
 	}
 }
